# learning-langchain-langgraph

./: .gitignore  README.md  pyproject.toml
src/common/: utils.py
src/langchain/tutorials/: agent.py  chatbot.py  classification.py  extraction.py
src/langgraph/get_started/: learn_basics.py  quickstart.py
src/langgraph/get_started/learn_basics/: part1_basic_chatbot.py  part2_web_search.py  part3_memory.py
src/langgraph/howto/: react_agent.py
src/langgraph/howto/agent_handoff/: using_command.py  using_react_agent.py  using_tools.py
src/langgraph/tutorials/: EPIC_customer_support.py
src/langgraph/tutorials/customer_support/: README.md  populate_db.py
src/langgraph/tutorials/customer_support/agent_iterations/: common.py  part1_zero_shot.py  part2_with_confirmation.py  part3_conditional_interrupt.py
src/langgraph/tutorials/customer_support/agent_iterations/part4_specialized_workflows/: graph.py  run.py  state.py
src/langgraph/tutorials/customer_support/agent_iterations/part4_specialized_workflows/assistants/: common.py  primary.py  specialized.py
src/langgraph/tutorials/customer_support/tools/: car_rental.py  company_policy.py  flight.py  hotel.py  trip.py
src/tutorials/: classification.py
src/ui/: gradio_ui.py
