[project]
name = "langchainsandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.32.0",
    "langchain>=0.3.18",
    "langchain-core>=0.3.34",
    "langchain-localai>=0.1.2",
    "langchain-openai>=0.3.4",
    "langgraph>=0.2.70",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
]
